# openworkers-scheduler

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.multi  README.md  update_table.sql
.github/workflows/: docker.yml
.sqlx/: query-efd911aec58079e06e311a5aca81e7cfaa3c37f4d3aaa46bef240c80c16b0ed5.json
src/: main.rs  models.rs  nats.rs  scheduler.rs
