[package]
name = "openworkers-scheduler"
version = "0.1.1"
edition = "2021"

[dependencies]
async-nats = "0.38.0"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
croner = "3.0.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "time", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
